force-app/main/default/objects/Personalize_Timeline_Filter__mdt/Personalize_Timeline_Filter__mdt.object-meta.xml
<CustomObject>
    <description>For display data can filter in Personalize Timeline.</description>
    <label>Personalize Timeline Filter</label>
    <pluralLabel>Personalize Timeline Filters</pluralLabel>
</CustomObject>