force-app/main/default/objects/Personalize_Timeline_Filter__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <description>Data can filter to display in Customer Timeline</description>
    <label>Filter</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>