force-app/main/default/objects/Personalize_Timeline_Filter__mdt/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Default Value for use to filter.</description>
    <label>IsDefault</label>
    <type>Checkbox</type>
</CustomField>