force-app/main/default/objects/Personalize_Timeline_Filter__mdt/fields/Sort_No__c.field-meta.xml
<CustomField>
    <fullName>Sort_No__c</fullName>
    <description>For sorting data.</description>
    <label>Sort No</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>