force-app/main/default/objects/Personalize_Timeline_Filter__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value for use to filter.</description>
    <label>Value</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>